2008-04-07  Murray Cumming  <murrayc@murrayc.com>

	* providers/postgres/libmain.c (plugin_init): Make sure that the 
	module_path string is freed before being reassigned, though this is 
	probably not the leak that valgrind is reporting here.

2008-04-06  Vivien Malerba <malerba@gnome-db.org>

	* configure.in:
	* providers/Makefile.am:
	* providers/mysql/*: merged Carlos Savoretti's preliminary MySQL provider's
	rework

2008-04-06  Murray Cumming  <murrayc@murrayc.com>

	* libgda/gda-column.c (gda_column_set_default_value):
	Free default_value with gda_value_free() instead of g_free(), to fix 
	what valgrind says is a possible leak.

2008-04-06  Vivien Malerba <malerba@gnome-db.org>

	* samples/XSLT/test.xsl:
	* samples/XSLT/transform.c:
	* libgda-xslt/libgda-xslt.h:
	* libgda-xslt/sqlexslt.c:
	* libgda-xslt/sql_backend.c:
	* libgda-xslt/sql_exslt_internal.c:
	* libgda-xslt/sql_backend.h: applied patch from Pawel Cesar Sanjuan Szklarz to
	add a new function to the xslt extension libgda-xslt

2008-04-06  Vivien Malerba <malerba@gnome-db.org>

	* libgda/gda-server-operation.c:
	* libgda/gda-easy.[ch]: modifications for bug #525877
	* tests/parser/Makefile.am:
	* tests/parser/check_validation.c:
	* tests/parser/check_normalization.c:
	* tests/parser/check_dml_comp.c: separated the validation check into a strict validation
	check, a DML command computation from a SELECT command and a "normalization" check
	* tests/parser/testvalid.xml: more test cases
	* libgda/sql-parser/: improved GsaSqlStatement structure check, validation, and added
	gda_sql_statement_normalize() which for example will expand all the '*' fields into the actual
	list of fields in the table.
	* libgda/gda-util.[ch]: added gda_identifier_equal() to compare SQL identifiers in
	a safe way (case insensitive comparison unless double quoted) and gda_identifier_hash()
	which computes a hash for an identifier (both can be used as base functions for a GHashTable)